<resources>
    <string name="app_name">Notes</string>
    <string name="circles">circles</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="microchel">microchel</string>
    <string name="email">email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
    <string name="welcome_onboard">Welcome Onboard!</string>
    <string name="we_help_you_meet">We help you meet up you tasks on time</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_password">Enter password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="tasks_list">Tasks List</string>
    <string name="welcome_name">Welcome %s!</string>
    <string name="welcome_email">Welcome %s!</string>
    <string name="no_history">No History</string>
    <string name="let_s_get_things_done_on_time">Let’s get things done on time</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur\nadipiscing elit. Tellus praesent purus\ntincidunt ut cursus vitae. Nisl, vitae nulla\nlectus tortor, est a aliquam. Pretium netus</string>
</resources>